Changed Buttons + Brand Name
Made borders / underlines thinner and buttons padding smaller

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
 
     <header id="mainH">
-      <h1 id="logo">grace & co.</h1>
+      <h1 id="logo">sweetener</h1>
 
 <div id="navigation">
       <nav id="main">
@@ -47,15 +47,15 @@
         <h3>NAVIGATION LINK</h3>
 
 
-        <a class="button-nav" href="#"> Next</a>
+        <a class="button-nav" href="#">next</a>
 
       </section>
 
 
       <section class="element">
         <h3>SUBMIT/RESET BUTTONS</h3>
-        <button > Submit </button>
-        <button > Reset </button>
+        <button >submit</button>
+        <button >reset</button>
       </section>
 
 
