--- a/listings.html
+++ b/listings.html
@@ -41,7 +41,9 @@
   <div class="listing">
 <div class="cards">
   <a href="product.html">
-<img class="imagehover" src="img/Asset1.png" alt="Asset1" style="width:100%">
+    <div class="cleanser">
+<!-- <img class="imagehover" src="img/cleanser1.jpg" alt="Asset1" style="width:100%"> -->
+</div>
 </a>
 <h4>Dusted Pillow Neck</h4>
 <p class="price">$80.00</p>
@@ -51,7 +53,7 @@
 
 <div class="cards">
   <a href="product.html">
-<img class="imagehover" src="img/Asset2.png" alt="Asset2" style="width:100%">
+<img class="imagehover" src="img/creamskin1.jpg" alt="Asset2" style="width:100%">
 </a>
 <h4>Marble Pillow Necklace</h4>
 <p class="price">$80.00</p>
@@ -61,7 +63,7 @@
 
 <div class="cards">
   <a href="product.html">
-<img class="imagehover" src="img/Asset3.png" alt="Asset3" style="width:100%">
+<img class="imagehover" src="img/klairs1.jpeg" alt="Asset3" style="width:100%">
 </a>
 <h4>Mies Crystal Block Necklace</h4>
 <p class="price">$95.00</p>
@@ -69,7 +71,7 @@
 
 <div class="cards">
   <a href="product.html">
-<img class="imagehover" src="img/Asset4.png" alt="Asset4" style="width:100%">
+<img class="imagehover" src="img/moisturizer1.jpg" alt="Asset4" style="width:100%">
 </a>
 <h4>Line Stud Earrings</h4>
 <p class="price">$30.00</p>
@@ -77,7 +79,7 @@
 
 <div class="cards">
   <a href="product.html">
-<img class="imagehover" src="img/Asset5.png" alt="Asset5" style="width:100%">
+<img class="imagehover" src="img/sunscreen1.jpg" alt="Asset5" style="width:100%">
 </a>
 <h4>Ettore Crystal Earrings</h4>
 <p class="price">$55.00</p>
@@ -85,7 +87,7 @@
 
 <div class="cards">
   <a href="product.html">
-<img class="imagehover" src="img/Asset6.png" alt="Asset6" style="width:100%">
+<img class="imagehover" src="img/waterserum1.jpg" alt="Asset6" style="width:100%">
 </a>
 <h4>Mies Marble Earrings</h4>
 <p class="price">$65.00</p>
