Updated all product listings

--- a/listings.html
+++ b/listings.html
@@ -41,11 +41,11 @@
   <div class="listing">
 <div class="cards">
   <a href="product.html">
-    <div class="cleanser">
+    <div class="imagelisting cleanser">
 <!-- <img class="imagehover" src="img/cleanser1.jpg" alt="Asset1" style="width:100%"> -->
 </div>
 </a>
-<h4>Dusted Pillow Neck</h4>
+<h4>Fresh — Soy Face Cleanser</h4>
 <p class="price">$80.00</p>
 
 
@@ -53,43 +53,53 @@
 
 <div class="cards">
   <a href="product.html">
-<img class="imagehover" src="img/creamskin1.jpg" alt="Asset2" style="width:100%">
+    <div class = "imagelisting creamskin">
+<!-- <img class="imagehover" src="img/creamskin1.jpg" alt="Asset2" style="width:100%"> -->
+</div>
 </a>
-<h4>Marble Pillow Necklace</h4>
-<p class="price">$80.00</p>
+<h4>Laneige — Cream Skin Toner</h4>
+<p class="price">$40.00</p>
 
 
 </div>
 
 <div class="cards">
   <a href="product.html">
-<img class="imagehover" src="img/klairs1.jpeg" alt="Asset3" style="width:100%">
+    <div class = "imagelisting klairs">
+<!-- <img class="imagehover" src="img/klairs1.jpeg" alt="Asset3" style="width:100%"> -->
+</div>
 </a>
-<h4>Mies Crystal Block Necklace</h4>
-<p class="price">$95.00</p>
+<h4>Klairs — Midnight Blue Calming Cream</h4>
+<p class="price">$35.00</p>
 </div>
 
 <div class="cards">
   <a href="product.html">
-<img class="imagehover" src="img/moisturizer1.jpg" alt="Asset4" style="width:100%">
+    <div class = "imagelisting moisturizer">
+<!-- <img class="imagehover" src="img/moisturizer1.jpg" alt="Asset4" style="width:100%"> -->
+</div>
 </a>
-<h4>Line Stud Earrings</h4>
+<h4>Krave — Oat So Simple Water Cream</h4>
 <p class="price">$30.00</p>
 </div>
 
 <div class="cards">
   <a href="product.html">
-<img class="imagehover" src="img/sunscreen1.jpg" alt="Asset5" style="width:100%">
+    <div class = "imagelisting sunscreen">
+<!-- <img class="imagehover" src="img/sunscreen1.jpg" alt="Asset5" style="width:100%"> -->
+</div>
 </a>
-<h4>Ettore Crystal Earrings</h4>
+<h4>Sioris — You Are My Shining Sunscreen</h4>
 <p class="price">$55.00</p>
 </div>
 
 <div class="cards">
   <a href="product.html">
-<img class="imagehover" src="img/waterserum1.jpg" alt="Asset6" style="width:100%">
+    <div class = "imagelisting serum">
+<!-- <img class="imagehover" src="img/waterserum1.jpg" alt="Asset6" style="width:100%"> -->
+</div>
 </a>
-<h4>Mies Marble Earrings</h4>
+<h4>Huxley — Essence; Grab Water</h4>
 <p class="price">$65.00</p>
 </div>
 
