Updated listing page
Changed product card hover, brand name, and category hover

--- a/listings.html
+++ b/listings.html
@@ -11,7 +11,7 @@
 <body>
 
   <header>
-    <h1 id="logo">grace & co.</h1>
+    <h1 id="logo">sweetener</h1>
     <div id="navigation">
           <nav>
             <a href="index.html">Home</a>
@@ -32,10 +32,11 @@
 
 <div class = "sideNav" >
 <p class="shopTop" > Shop all </p>
-<a href="#"> Necklaces +</a>
-<a href="#"> Earrings +</a>
-<a href="#"> Bracelets +</a>
-<a href= "#"> Rings +</a>
+<a href="#"> Cleanser +</a>
+<a href="#"> Toner +</a>
+<a href="#"> Serum +</a>
+<a href= "#"> Moisturizer +</a>
+<a href= "#"> Sunscreen +</a>
 </div>
 
   <div class="listing">
