--- a/index.html
+++ b/index.html
@@ -150,26 +150,36 @@
 
   <div class="listing">
 <div class="cards">
-<img class="imagehover" src="img/Asset1.png" alt="Asset1" style="width:100%">
-<h4>Dusted Pillow Neck</h4>
-<p class="price">$80.00</p>
+  <a href="product.html">
+    <div class="imagelisting cleanser">
+  <!-- <img class="imagehover" src="img/cleanser1.jpg" alt="Asset1" style="width:100%"> -->
+  </div>
+  </a>
+  <h4>Fresh — Soy Face Cleanser</h4>
+  <p class="price">$80.00</p>
 
 
 </div>
 
 <div class="cards">
-<img class="imagehover" src="img/Asset2.png" alt="Asset2" style="width:100%">
-<h4>Marble Pillow Necklace</h4>
-<p class="price">$80.00</p>
+  <div class = "imagelisting creamskin">
+<!-- <img class="imagehover" src="img/creamskin1.jpg" alt="Asset2" style="width:100%"> -->
+</div>
+</a>
+<h4>Laneige — Cream Skin Toner</h4>
+<p class="price">$40.00</p>
 
 
 </div>
 
 <div class="cards">
-<img class="imagehover" src="img/Asset3.png" alt="Asset3" style="width:100%">
-<h4>Mies Crystal Block Necklace</h4>
-<p class="price">$95.00</p>
+  <a href="product.html">
+    <div class = "imagelisting klairs">
+<!-- <img class="imagehover" src="img/klairs1.jpeg" alt="Asset3" style="width:100%"> -->
 </div>
+</a>
+<h4>Klairs — Midnight Blue Calming Cream</h4>
+<p class="price">$35.00</p>
 
 </div>
 
@@ -362,7 +372,7 @@
       <p> As it is an online only store, customers may be more intrigued into purchasing products from the website. The website interface provides a fresh and easy process for users to experience.   </p>
       <section id="artdirection">
         <h3> ART DIRECTION </h3>
-        <img src="img/art_direction-01.png" alt="Sapphire Hoops">
+        <img src="img/artdirection.png" alt="Art Direction">
       </section>
     </section>
 </section>
