--- a/checkout.html
+++ b/checkout.html
@@ -52,11 +52,11 @@
   </div>
 
   <div class="col-1">
-    <img class="checkout_img" src="img/Asset3-1.png" alt="3-1">
+    <img class="checkout_img" src="img/cleanser1.jpg" alt="3-1">
     </div>
 
   <div class="col-2">
-    <p class="productName"> Mies Crystal Necklace </p>
+    <p class="productName"> Fresh — Soy Face Cleanser </p>
     <p class="productName"> $95.00 </p>
     </div>
 
@@ -70,11 +70,11 @@
 
 
   <div class="col-1">
-    <img class="checkout_img" src="img/Asset5-1.png" alt="5-1">
+    <img class="checkout_img" src="img/moisturizer1.jpg" alt="5-1">
     </div>
 
   <div class="col-2">
-    <p class="productName"> Ettore Crystal Earrings </p>
+    <p class="productName"> Krave Beauty — Oat So Simple Water Cream </p>
     <p class="productName"> $55.00 </p>
     </div>
 
@@ -87,11 +87,11 @@
   </div>
 
   <div class="col-1">
-    <img class="checkout_img" src="img/Asset4-1.png" alt="4-1">
+    <img class="checkout_img" src="img/waterserum1.jpg" alt="4-1">
     </div>
 
   <div class="col-2">
-    <p class="productName"> Line Stud Earrings </p>
+    <p class="productName"> Huxley — Essence; Grab Water </p>
     <p class="productName"> $30.00 </p>
     </div>
 
