Edited Image As Link Element

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <h3>IMAGE AS LINK</h3>
 <!-- **IMAGE AS A LINK **-->
         <a href="https://mejuri.com/shop/products/boyfriend-mini-hoops">
-  <img class="imagehover" src="img/Asset5.png" alt="crystal earrings">
+  <img class="imagehover" src="img/creamskin1.jpg" alt="Laneige Cream Skin">
 </a>
       </section>
 
