changed grac&co to sweetener

--- a/checkout.html
+++ b/checkout.html
@@ -12,7 +12,7 @@
 <body>
 
   <header>
-    <h1 id="logo">grace & co.</h1>
+    <h1 id="logo">sweetener</h1>
     <div id="navigation">
           <nav>
             <a href="index.html">Home</a>
