Edited Brand Text

--- a/index.html
+++ b/index.html
@@ -354,14 +354,13 @@
 <section id="about_company">
   <h3> About the Company </h3>
 <section class="element">
-      <h3>What is the company? </h3>
-      <p>My company is an online jewlry store that offers a variety of highly fine crafted accessories such as, necklaces, bracelets, earrings, and rings.  </p> <br>
-
-      <h3> Who is the company to potential customers? </h3>
-      <p> This company may appeal to customers who have an interest in latest fashion trends. Additionally, the company provides a range of styles that are versatile to any customers. </p> <br>
-
-      <h3>Why might this company entice someone to purchase a product or service? </h3>
-      <p> As it is an online only store, customers may be more intrigued into purchasing products from the website. The website interface provides a fresh and easy process for users to experience.   </p>
+  <h3>Basic Branding Ideas</h3>
+  <p><em>What does the company do, or offer?</em><br>
+  The company is a skincare product retailer which will allow users to purchase different skincare products from different brands on one site.</p>
+  <p><em>Who is the company to potential customers? (as a person)</em><br>
+  The website will target a younger audience, such as young adults in their early 20s. The company will become a reliable source of transparent information for skincare advice. This means that the website will clearly state which products would be appropriate or inappropriate for specific skin types instead of promoting and trying to sell everything. Ultimately, this builds trust between the customer and company.</p>
+  <p><em>Why might this company entice someone to purchase a product or service?</em><br>
+  Through personal filters, customers will be able to easily figure out which products would be suitable for them. For example, a customer can filter products by skin concern such as "acne", "dark spots", or "dry skin".</p>
       <section id="artdirection">
         <h3> ART DIRECTION </h3>
         <img src="img/artdirection.png" alt="Art Direction">
