--- a/product.html
+++ b/product.html
@@ -11,7 +11,7 @@
 <body>
 
   <header>
-    <h1 id="logo">grace & co.</h1>
+    <h1 id="logo">sweetener</h1>
     <div id="navigation">
           <nav>
             <a href="index.html">Home</a>
@@ -28,19 +28,19 @@
   <div class="card">
 
     <div id="product">
-  <img id="crystal" src="img/Asset3.png" alt="Sapphire Hoops">
+  <img src="img/waterserum1.jpg" alt="Sapphire Hoops">
   </div>
-
   <div id="info">
-  <h2 id="lightning">  Mies Crystal Necklace </h2>
-  <h4> 14K gold filled </h4>
+  <h2>  Huxley </h2>
+  <h3> Essence; Grab Water </h3>
   <p class="price">$95.00 </p>
-  <h4> Details </h4>
-  <p class="description"> • 14kt gold fill, crystal quartz <br>
-• Crystal quartz paired with gold, rose gold, or silver <br>
-• 2" extender chain allows necklace to be worn at 16" or 18" <br>
-• The stone is about 5/8" wide. <br>
+
+
+  <h4> Experience a deeply hydrating essence that glides over thirsty and tired skin. </h4>
+  <p class="description">  <br>
+  Great for normal to oily or combination skin types, Huxley Grab Water Essence delivers long-lasting hydration and nourishment to skin in need of protection against various environmental stressors; free radicals, pollutants and moisture loss. Huxley uses a safe and certified-organic ingredient, Sahara’s prickly pear seed oil, which is full of skin-benefiting antioxidants, vitamin E and linoleic acid. Acai berry, quinoa and yerba mate provide additional antioxidants and nutrients while peppermint helps to cool. No more greasy but dehydrated skin. Made without parabens, mineral oils or synthetic dyes.
 </p>
+
   <p> <button id="add"> Add to Cart </button> </p>
   </div>
   </div>
