--- a/product.html
+++ b/product.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>IAT 339 Style Guide</title>
-  <link href="css/main.css" rel="stylesheet">
+  <link href="css/listing.css" rel="stylesheet">
     <link href="css/fonts.css" rel="stylesheet">
 </head>
 
@@ -31,17 +31,29 @@
   <img src="img/waterserum1.jpg" alt="Sapphire Hoops">
   </div>
   <div id="info">
-  <h2>  Huxley </h2>
-  <h3> Essence; Grab Water </h3>
-  <p class="price">$95.00 </p>
-
-
-  <h4> Experience a deeply hydrating essence that glides over thirsty and tired skin. </h4>
-  <p class="description">  <br>
-  Great for normal to oily or combination skin types, Huxley Grab Water Essence delivers long-lasting hydration and nourishment to skin in need of protection against various environmental stressors; free radicals, pollutants and moisture loss. Huxley uses a safe and certified-organic ingredient, Sahara’s prickly pear seed oil, which is full of skin-benefiting antioxidants, vitamin E and linoleic acid. Acai berry, quinoa and yerba mate provide additional antioxidants and nutrients while peppermint helps to cool. No more greasy but dehydrated skin. Made without parabens, mineral oils or synthetic dyes.
+  <h1>  Huxley </h1>
+  <h2 id = "listingbrand"> Essence; Grab Water </h2>
+  <p class="description">
+  Great for normal to oily or combination skin types, Huxley Grab Water Essence delivers long-lasting hydration and nourishment to skin in need of protection against various environmental stressors; free radicals, pollutants and moisture loss.
 </p>
+<h4 class="subheaderlisting">Key Ingredients</h4>
+<p>Prickly pear seed oil — High in vitamin E and linoleic. Healing and nourishing for damaged skin.
+<br><br>
+Acai berry — Antioxidant powerhouse. Protects skin from environmental stress and city pollution.</p>
 
-  <p> <button id="add"> Add to Cart </button> </p>
+<div id="reviewsection" class="reviewlisting">
+
+<div id="reviewheader">
+  <h4>Review</h4>
+</div>
+
+<div id="reviewnumber">
+  5.0
+</div>
+
+</div>
+
+  <p> <button id="add"> Add to Cart — $45 </button> </p>
   </div>
   </div>
 
