--- a/nav.html
+++ b/nav.html
@@ -12,10 +12,13 @@
 <body>
 
   <header>
+    <img class="search-icon" src="img/search.svg" alt="search icon">
     <h1 class="logo">sweetener</h1>
-    <svg height="20" width="20">
-  <circle cx="10" cy="50" r="10" fill=#343434 />
-</svg>
+
+    <button class="cart-icon"> 2 </button>
+
+</div>
+</header>
 
     <div class="navigation">
           <nav>
@@ -26,7 +29,7 @@
             <a href="#about_us"> About us </a>
           </nav>
         </div>
-  </header>
+
 
 
 
