Finished product.html and product2.html
Added images into the img folder carousel, created additional product2 html file

--- a/product2.html
+++ b/product2.html
@@ -30,19 +30,19 @@
       </div>
 
     <div id="product">
-            <p id="subcategory">skincare / serum</p>
-  <img id="productimage" src="img/waterserum1.jpg" alt="Water Serum">
+            <p id="subcategory">skincare / toner</p>
+  <img id="productimage" src="img/creamskin1.jpg" alt="Cream Skin">
   </div>
   <div id="info">
-  <h1 id="productbrand">Huxley </h1>
-  <h2 id = "listingbrand"> Essence; Grab Water </h2>
+  <h1 id="productbrand">Laneige</h1>
+  <h2 id = "listingbrand">Cream Skin</h2>
   <p class="description">
-  Great for normal to oily or combination skin types, Huxley Grab Water Essence delivers long-lasting hydration and nourishment to skin in need of protection against various environmental stressors; free radicals, pollutants and moisture loss.
+  Laneige Cream Skin is a 2-in-1 product that is like an entire bottle of moisturizer melted down into a toner. This multipurpose product fortifies your skin while delivering deep hydration and strengthening your skin's moisture barrier.
 </p>
 <h4 class="subheaderlisting">Key Ingredients</h4>
-<p>Prickly pear seed oil — High in vitamin E and linoleic. Healing and nourishing for damaged skin.
+<p>White leaf tea water —  Rich in amino acids to strengthen the skin barrier, moisturize, and soothe.
 <br><br>
-Acai berry — Antioxidant powerhouse. Protects skin from environmental stress and city pollution.</p>
+Meadowfoam seed oil — Naturally helps skin form a barrier to lock in moisture and deliver nutrients deep into the epidermis.</p>
 
 <div id="reviewsection" class="reviewlisting">
 
@@ -51,12 +51,12 @@ Acai berry — Antioxidant powerhouse. Protects skin from environmental stress a
 </div>
 
 <div id="reviewnumber">
-    ● ● ● ● ● 5.0
+  ● ● ● ● ● 5.0
 </div>
 
 </div>
 
-  <p> <button id="add"> Add to Cart — $45 </button> </p>
+  <p> <button id="add"> Add to Cart — $30 </button> </p>
   </div>
   </div>
 
