--- a/checkoutV2.html
+++ b/checkoutV2.html
@@ -11,108 +11,9 @@
 
 <body>
 
-  <header>
-    <h1 id="logo">sweetener</h1>
+<h1> Checkout </h1>
 
-  </header>
-
-
-
-<h2 class="checkit"> Your Cart </h2>
-
-
-
-<div class="container">
-
-<div class="checkout">
-<div class="shoppingCart">
-
-  <div class="topRow">
-  <h4> PRODUCT </h4>
-  </div>
-
-  <div class="topRow">
-  </div>
-
-  <div class="topRow">
-  <h4 > QTY </h4>
-  </div>
-
-  <div class="topRow">
-  <h4> PRICE </h4>
-  </div>
-
-  <div class="col-1">
-    <img class="checkout_img" src="img/cleanser1.jpg" alt="3-1">
-    </div>
-
-  <div class="col-2">
-    <p class="productName"> Fresh — Soy Face Cleanser </p>
-    <p class="productName"> $95.00 </p>
-    </div>
-
-  <div class="col-3">
-    <h4 class="qty"> 1 </h4>
-    </div>
-
-  <div class ="col-4">
-  <h4> $95.00 </h4>
-  </div>
-
-
-  <div class="col-1">
-    <img class="checkout_img" src="img/moisturizer1.jpg" alt="5-1">
-    </div>
-
-  <div class="col-2">
-    <p class="productName"> Krave Beauty — Oat So Simple Water Cream </p>
-    <p class="productName"> $55.00 </p>
-    </div>
-
-  <div class="col-3">
-    <h4 class="qty"> 1 </h4>
-    </div>
-
-  <div class ="col-4">
-  <h4> $55.00 </h4>
-  </div>
-
-  <div class="col-1">
-    <img class="checkout_img" src="img/waterserum1.jpg" alt="4-1">
-    </div>
-
-  <div class="col-2">
-    <p class="productName"> Huxley — Essence; Grab Water </p>
-    <p class="productName"> $30.00 </p>
-    </div>
-
-  <div class="col-3">
-    <h4 class="qty"> 2 </h4>
-    </div>
-
-  <div class ="col-4">
-  <h4> $60.00 </h4>
-  </div>
-
-  </div>
-
-
-  <div class="side2">
-
-  <h3 class="orderSum"> Order Summary </h3>
-  <br>
-  <div class="summary">
-<p class="order"> Subtotal <span class="subtotal"> $210.00 </span> </p>
-<p class="order"> Shipping <span class="subtotal"> $8.50 </span> </p>
-<p class="order" > Taxes <span class="subtotal" > $25.20 </span> </p>
-<p class="order total"> Total  <span class="subtotal"> $243.70 </span> </p>
-</div>
-    </div>
-</div>
-</div>
-
-<form action="#">
-  <div class="payment_form">
+  <div class="checkout">
 
   <div class="payment">
     <h3> Billing Address </h3>
@@ -139,9 +40,7 @@
 
 </div>
 
-</div>
 
-<div class="payment">
 <h3> Payment Information </h3>
 <label for="cardname"> Name on Card </label> <br>
 <input class="cartText" type="text" id="cardname" placeholder="Brianna Quan"> <br>
@@ -162,15 +61,41 @@
 </div>
 
 </div>
-</div>
 
 </div>
+
+
+
+<div class ="summary">
+<div class="productsum">
+  <div class="checkimg">
+  <img class="checkout_img" src="img/cleanser1.jpg" alt="3-1">
+</div>
+
+<div class="checkimg">
+    <img class="checkout_img" src="img/waterserum1.jpg" alt="4-1">
+</div>
+
+<div class="checkimg">
+
+  <img class="checkout_img" src="img/moisturizer1.jpg" alt="5-1">
+  </div>
+</div>
+
+<div class="summary-info">
+<p class="order"> Subtotal <span class="subtotal"> $210.00 </span> </p>
+<p class="order"> Shipping <span class="subtotal"> $8.50 </span> </p>
+<p class="order" > Taxes <span class="subtotal" > $25.20 </span> </p>
+<p class="order total"> Total  <span class="subtotal"> $243.70 </span> </p>
+</div>
+
+
 <div class="confirm">
   <button> Confirm Payment </button>
 </div>
-</form>
 
-
+</div>
+</div>
 </body>
 
 </html>
