Added product2.html access to listings.html

--- a/listings.html
+++ b/listings.html
@@ -41,7 +41,7 @@
 
   <div class="listing">
 <div class="cards">
-  <a href="product.html">
+  <a href="product2.html">
     <div class="imagelisting cleanser">
 <!-- <img class="imagehover" src="img/cleanser1.jpg" alt="Asset1" style="width:100%"> -->
 </div>
@@ -53,7 +53,7 @@
 </div>
 
 <div class="cards">
-  <a href="product.html">
+  <a href="product2.html">
     <div class = "imagelisting creamskin">
 <!-- <img class="imagehover" src="img/creamskin1.jpg" alt="Asset2" style="width:100%"> -->
 </div>
@@ -65,7 +65,7 @@
 </div>
 
 <div class="cards">
-  <a href="product.html">
+  <a href="product2.html">
     <div class = "imagelisting klairs">
 <!-- <img class="imagehover" src="img/klairs1.jpeg" alt="Asset3" style="width:100%"> -->
 </div>
