--- a/product2.html
+++ b/product2.html
@@ -6,21 +6,27 @@
   <title>IAT 339 Style Guide</title>
   <link href="css/listing.css" rel="stylesheet">
     <link href="css/fonts.css" rel="stylesheet">
+    <link href="css/nav.css" rel="stylesheet">
 </head>
 
 <body>
 
   <header>
-    <h1 id="logo">sweetener</h1>
-    <div id="navigation">
-          <nav>
-            <a href="index.html">Home</a>
-            <a href="listings.html">Shop</a>
-            <a href="#about_company">About</a>
-            <a href="#about_company">Contact us</a>
-            <a id="icon" href="checkout.html">
+    <img class="search-icon" src="img/search.svg" alt="search icon">
+    <h1 class="logo">sweetener</h1>
 
-            </a>
+    <button class="cart-icon"> 2 </button>
+
+</div>
+</header>
+
+    <div class="navigation">
+          <nav>
+            <a href="index.html">New</a>
+            <a href="listings.html">Shop all</a>
+            <a href="#about_company">Brands</a>
+            <a href="#about_company">Quizzes</a>
+            <a href="#about_us"> About us </a>
           </nav>
         </div>
   </header>
