--- a/checkoutV2.html
+++ b/checkoutV2.html
@@ -11,12 +11,13 @@
 
 <body>
 
-<h1> Checkout </h1>
+
 
   <div class="checkout">
 
   <div class="payment">
-    <h3> Billing Address </h3>
+    <h1 class="heading"> Checkout </h1>
+    <h3 class="check-heading"> Billing Address </h3>
 
   <label for="fullname"> Full Name </label> <br>
   <input class="cartText" type="text" id="fullname" placeholder="Name"> <br>
@@ -41,7 +42,7 @@
 </div>
 
 
-<h3> Payment Information </h3>
+<h3 class="check-heading"> Payment Information </h3>
 <label for="cardname"> Name on Card </label> <br>
 <input class="cartText" type="text" id="cardname" placeholder="Brianna Quan"> <br>
 
@@ -67,18 +68,25 @@
 
 
 <div class ="summary">
+  <h3> Summary - 3 items </h3>
 <div class="productsum">
   <div class="checkimg">
   <img class="checkout_img" src="img/cleanser1.jpg" alt="3-1">
+  <p class="productName"> Fresh — Soy Face Cleanser </p>
+  <p class="productName"> $95.00 </p>
 </div>
 
 <div class="checkimg">
     <img class="checkout_img" src="img/waterserum1.jpg" alt="4-1">
+    <p class="productName"> Huxley — Essence; Grab Water </p>
+    <p class="productName"> $30.00 </p>
 </div>
 
 <div class="checkimg">
 
   <img class="checkout_img" src="img/moisturizer1.jpg" alt="5-1">
+  <p class="productName"> Krave Beauty — Oat So Simple Water Cream </p>
+  <p class="productName"> $55.00 </p>
   </div>
 </div>
 
