Re-linked pages
re-linked pages together
edited checkout page 
updated content in style guide
changed colours of buttons

--- a/checkoutV2.html
+++ b/checkoutV2.html
@@ -10,13 +10,19 @@
 </head>
 
 <body>
-
+<header>
+  <h1 class="checkoutlogo">sweetener</h1>
+  </header>
 
 
   <div class="checkout">
 
   <div class="payment">
+    <a class="text-link" href=listings.html>
+    < Back to shopping
+    </a>
     <h1 class="heading"> Checkout </h1>
+    <div class="part1">
     <h3 class="check-heading"> Billing Address </h3>
 
   <label for="fullname"> Full Name </label> <br>
@@ -41,7 +47,9 @@
 
 </div>
 
+</div>
 
+<div class="part1">
 <h3 class="check-heading"> Payment Information </h3>
 <label for="cardname"> Name on Card </label> <br>
 <input class="cartText" type="text" id="cardname" placeholder="Brianna Quan"> <br>
@@ -62,7 +70,7 @@
 </div>
 
 </div>
-
+</div>
 </div>
 
 
