--- a/listings.html
+++ b/listings.html
@@ -13,10 +13,13 @@
 
   <header>
     <img class="search-icon" src="img/search.svg" alt="search icon">
+    <a href="index.html">
     <h1 class="logo">sweetener</h1>
+  </a>
 
+<a href="checkoutV2.html">
     <button class="cart-icon"> 2 </button>
-
+</a>
 </div>
 
 </header>
