--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
     <link href="css/main.css" rel="stylesheet">
     <link href="css/checkout.css" rel="stylesheet">
     <link href="css/fonts.css" rel="stylesheet">
+    <link href="css/checkoutv2.css" rel="stylesheet">
+    <link href="css/nav.css" rel="stylesheet">
   </head>
 
   <body>
 
     <header id="mainH">
-      <h1 id="logo">sweetener</h1>
 
-<div id="navigation">
+      <h1 class="logo">sweetener style guide</h1>
+
+<div class="navigation">
       <nav id="main">
         <a href="#interactive_elements">Interactive Elements</a>
         <a href="#text_elements">Text Elements</a>
@@ -211,140 +214,99 @@
 <!-- PAYMENT -->
       <section class="element">
         <h3>PAYMENT FORM</h3>
-<a class="direct" href="checkout.html"> Go to Payment</a>
+<a class="direct" href="checkoutV2.html"> Go to Payment</a>
 
-        <form action="#">
-          <div class="payment_form">
-
-          <div class="payment">
-            <h3> Billing Address </h3>
-
-          <label for="fullname"> Full Name </label> <br>
-          <input type="text" id="fullname" placeholder="Name"> <br>
-
-          <label for="email"> Email </label> <br>
-          <input type="text" id="email" placeholder="example@me.com"> <br>
-
-          <label for="adr"> Address </label> <br>
-          <input type="text" id="adr" placeholder="3098 Roycroft Court"> <br>
-
-          <label for="city"> City </label> <br>
-          <input type="text" id="city" placeholder ="Burnaby"> <br>
-
-        <label for="zip"> Zip Code </label> <br>
-        <input type="text" id="zip" placeholder="V5A 3X9"> <br>
-</div>
 <div class="payment">
-  <h3> Payment Information </h3>
-        <label for="cardname"> Name on Card </label> <br>
-        <input type="text" id="cardname" placeholder="Brianna Quan"> <br>
 
-        <label for="cardnum"> Card Number </label> <br>
-        <input type="text" id="cardnum" placeholder="1234566789"> <br>
+  <div class="part1">
+  <h3 class="check-heading"> Billing Address </h3>
 
-        <label for="expire"> Expiry Date </label> <br>
-        <input type="text" id="expire" placeholder="01/12/20"> <br>
+<label for="fullname"> Full Name </label> <br>
+<input class="cartText" type="text" id="fullname" placeholder="Name"> <br>
 
-        <label for="cvv"> CVV number </label> <br>
-        <input type="text" id="cvv" placeholder="401"> <br>
+<label for="email"> Email </label> <br>
+<input class="cartText" type="text" id="email" placeholder="example@me.com"> <br>
+
+<label for="adr"> Address </label> <br>
+<input class="cartText"type="text" id="adr" placeholder="3098 Roycroft Court"> <br>
+
+<div class="areaCode">
+<div class="half1">
+<label for="city"> City </label> <br>
+<input class="cartText" type="text" id="city" placeholder ="Burnaby"> <br>
 </div>
 
+<div class="half2">
+<label for="zip"> Zip Code </label> <br>
+<input class="cartText" type="text" id="zip" placeholder="V5A 3X9"> <br>
+</div>
 
-    </div>
-    <div>
-          <button> Confirm Payment </button>
-        </div>
-        </form>
+</div>
+
+</div>
+
+<div class="part1">
+<h3 class="check-heading"> Payment Information </h3>
+<label for="cardname"> Name on Card </label> <br>
+<input class="cartText" type="text" id="cardname" placeholder="Brianna Quan"> <br>
+
+<label for="cardnum"> Card Number </label> <br>
+<input class="cartText"type="text" id="cardnum" placeholder="1234566789"> <br>
+
+<div class="areaCode">
+
+<div class="half1">
+<label for="expire"> Expiry Date </label> <br>
+<input class="cartText" type="text" id="expire" placeholder="01/12/20"> <br>
+</div>
+
+<div class="half2">
+<label for="cvv"> CVV number </label> <br>
+<input class="cartText" type="text" id="cvv" placeholder="401"> <br>
+</div>
+
+</div>
+</div>
+</div>
       </section>
 
       <section class="element">
         <h3>CHECKOUT CART</h3>
-        <a class="direct" href="checkout.html"> Go to Checkout</a>
-        <div class="container2">
-        <div class="checkout2">
-        <div class="shoppingCart">
+        <div class ="summary sum2">
+          <h3> Summary - 3 items </h3>
+        <div class="productsum">
+          <div class="checkimg">
+          <img class="checkout_img" src="img/cleanser1.jpg" alt="3-1">
+          <p class="productName"> Fresh — Soy Face Cleanser </p>
+          <p class="productName"> $95.00 </p>
+        </div>
 
-          <div class="topRow">
-          <h4> PRODUCT </h4>
-          </div>
-
-          <div class="topRow">
-          </div>
-
-          <div class="topRow">
-          <h4 > QTY </h4>
-          </div>
-
-          <div class="topRow">
-          <h4> PRICE </h4>
-          </div>
-
-          <div class="col-1">
-            <img class="checkout_img" src="img/cleanser1.jpg" alt="3-1">
-            </div>
-
-          <div class="col-2">
-            <p class="productName"> Fresh — Soy Face Cleanser </p>
-            <p class="productName"> $95.00 </p>
-            </div>
-
-          <div class="col-3">
-            <h4 class="qty"> 1 </h4>
-            </div>
-
-          <div class ="col-4">
-          <h4> $95.00 </h4>
-          </div>
-
-
-          <div class="col-1">
-            <img class="checkout_img" src="img/moisturizer1.jpg" alt="5-1">
-            </div>
-
-          <div class="col-2">
-            <p class="productName"> Krave Beauty — Oat So Simple Water Cream </p>
-            <p class="productName"> $55.00 </p>
-            </div>
-
-          <div class="col-3">
-            <h4 class="qty"> 1 </h4>
-            </div>
-
-          <div class ="col-4">
-          <h4> $55.00 </h4>
-          </div>
-
-          <div class="col-1">
+        <div class="checkimg">
             <img class="checkout_img" src="img/waterserum1.jpg" alt="4-1">
-            </div>
-
-          <div class="col-2">
             <p class="productName"> Huxley — Essence; Grab Water </p>
             <p class="productName"> $30.00 </p>
-            </div>
+        </div>
 
-          <div class="col-3">
-            <h4 class="qty"> 2 </h4>
-            </div>
+        <div class="checkimg">
 
-          <div class ="col-4">
-          <h4> $60.00 </h4>
+          <img class="checkout_img" src="img/moisturizer1.jpg" alt="5-1">
+          <p class="productName"> Krave Beauty — Oat So Simple Water Cream </p>
+          <p class="productName"> $55.00 </p>
           </div>
+        </div>
 
-          </div>
-
-
-          <div class="side2">
-
-          <h3 class="orderSum"> Order Summary </h3>
-          <br>
-        <div class="summary">
+        <div class="summary-info">
         <p class="order"> Subtotal <span class="subtotal"> $210.00 </span> </p>
         <p class="order"> Shipping <span class="subtotal"> $8.50 </span> </p>
         <p class="order" > Taxes <span class="subtotal" > $25.20 </span> </p>
         <p class="order total"> Total  <span class="subtotal"> $243.70 </span> </p>
         </div>
-            </div>
+
+
+        <div class="confirm">
+          <button> Confirm Payment </button>
+        </div>
+
         </div>
         </div>
 
