--- a/product.html
+++ b/product.html
@@ -15,10 +15,14 @@
 
     <header>
       <img class="search-icon" src="img/search.svg" alt="search icon">
+
+      <a href="index.html">
       <h1 class="logo">sweetener</h1>
+</a>
 
+<a href="checkoutV2.html">
       <button class="cart-icon"> 2 </button>
-
+</a>
   </div>
 </header>
 
