--- a/product2.html
+++ b/product2.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="utf-8">
   <title>IAT 339 Style Guide</title>
-  <link href="css/listing.css" rel="stylesheet">
+    <link href="css/listing.css" rel="stylesheet">
     <link href="css/fonts.css" rel="stylesheet">
     <link href="css/nav.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
 </head>
 
 <body>
@@ -32,7 +33,7 @@
             <a href="#about_us"> About us </a>
           </nav>
         </div>
-  </header>
+
 
   <div class="card">
     <div id="productcarousel">
