--- a/product.html
+++ b/product.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8">
   <title>IAT 339 Style Guide</title>
 
-  <link href="css/listing.css" rel="stylesheet">
+    <link href="css/listing.css" rel="stylesheet">
     <link href="css/fonts.css" rel="stylesheet">
     <link href="css/nav.css" rel="stylesheet">
-
+        <link href="css/main.css" rel="stylesheet">
 </head>
 
 <body>
@@ -21,20 +21,19 @@
 </a>
 
 <a href="checkoutV2.html">
-      <button class="cart-icon"> 2 </button>
+      <button class="cart-icon" href="checkoutV2.html"> 2 </button>
 </a>
-  </div>
 </header>
 
-      <div class="navigation">
-            <nav>
-              <a href="index.html">New</a>
-              <a href="listings.html">Shop all</a>
-              <a href="#about_company">Brands</a>
-              <a href="#about_company">Quizzes</a>
-              <a href="#about_us"> About us </a>
-            </nav>
-          </div>
+<div class="navigation">
+      <nav>
+        <a href="index.html">New</a>
+        <a href="listings.html">Shop all</a>
+        <a href="#about_company">Brands</a>
+        <a href="#about_company">Quizzes</a>
+        <a href="#about_us"> About us </a>
+      </nav>
+    </div>
 
 
   <div class="card">
@@ -108,7 +107,7 @@ Acai berry — Antioxidant powerhouse. Protects skin from environmental stress a
   <p class="price">$55.00</p>
   </div>
 </div>
-</div>
+
   </section>
 
 
