--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
   <title>IAT 339 Style Guide</title>
   <!-- <link href="css/main.css" rel="stylesheet"> -->
     <link href="css/fonts.css" rel="stylesheet">
+    <link href="css/home.css" rel="stylesheet">
     <link href="css/nav.css" rel="stylesheet">
 </head>
 
@@ -17,7 +18,7 @@
 
     <button class="cart-icon"> 2 </button>
 
-</div>
+
 </header>
 
     <div class="navigation">
@@ -31,7 +32,10 @@
         </div>
 
   <section id="homebackground">
-        <img src="img/home.jpg" alt="5-1">
+    <div id="textandimg">
+        <img id="homeimage" src="img/homepagebackground.jpg" alt="homebackground">
+        <h2 id="hometext">shop now</h2>
+      </div>
   </section>
 
 
