linked about page
linked about page to other pages

--- a/product2.html
+++ b/product2.html
@@ -30,7 +30,7 @@
             <a href="listings.html">Shop all</a>
             <a href="index.html">Brands</a>
             <a href="index.html">Quizzes</a>
-            <a href="index.html"> About us </a>
+            <a href="about.html"> About us </a>
           </nav>
         </div>
 
