--- a/home.html
+++ b/home.html
@@ -41,7 +41,9 @@
         <!-- <a href = "listings.html" h2 id="hometext">shop now</h2> -->
         <div class=landing-text>
         <h1 class=> New released must-haves! </h1>
+        <form action="listings.html">
         <button class="shop-now"> SHOP NOW </button>
+      </form>
       </div>
       </div>
         </section>
